add static folder

--- a/animate/clock.html
+++ b/animate/clock.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../static/css/all.css">
     <title>Clock</title>
     <style>
         section {
@@ -14,7 +14,7 @@
             border: 20px solid #fff;
             box-shadow: inset 0 0 30px rgba(0, 0, 0, .1),
                 0 20px 20px rgba(0, 0, 0, .2);
-            background: #fff url(../img/clock.png);
+            background: #fff url(../static/img/clock.png);
             background-size: cover;
         }
 
