--- a/image/3DflapImg.html
+++ b/image/3DflapImg.html
@@ -39,7 +39,7 @@
         }
 
         .container .box.box1 span {
-            background: url('../img/car.jpg');
+            background: url(../static/img/car.jpg);
             transform-origin: top;
         }
 
@@ -48,7 +48,7 @@
         }
 
         .container .box.box2 span {
-            background: url('../img/dress.jpg');
+            background: url(../static/img/dress.jpg);
             transform-origin: bottom;
             transform: rotateX(90deg) translateY(50%);
         }
