--- a/image/image-distortion.html
+++ b/image/image-distortion.html
@@ -57,8 +57,8 @@
 
 <body>
     <div class="imgBox">
-        <img src="../img/gallery3.jpg" alt="">
-        <img src="../img/gallery6.jpg" alt="">
+        <img src="../static/img/gallery3.jpg" alt="">
+        <img src="../static/img/gallery6.jpg" alt="">
     </div>
 </body>
 
