--- a/image/layered-image.html
+++ b/image/layered-image.html
@@ -57,10 +57,10 @@
 
 <body>
     <div>
-        <img src="../img/gallery1.jpg">
-        <img src="../img/gallery1.jpg">
-        <img src="../img/gallery1.jpg">
-        <img src="../img/gallery1.jpg">
+        <img src="../static/img/gallery1.jpg">
+        <img src="../static/img/gallery1.jpg">
+        <img src="../static/img/gallery1.jpg">
+        <img src="../static/img/gallery1.jpg">
     </div>
 </body>
 
