--- a/image/lazeLoading.html
+++ b/image/lazeLoading.html
@@ -43,25 +43,25 @@
 <body>
     <section>
         <div class="card">
-            <img data-src='../img/sun1.jpg'>
+            <img data-src='../static/img/sun1.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
         </div>
         <div class="card">
-            <img data-src='../img/sun2.jpg'>
+            <img data-src='../static/img/sun2.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
         </div>
         <div class="card">
-            <img data-src='../img/sun3.jpg'>
+            <img data-src='../static/img/sun3.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
         </div>
         <div class="card">
-            <img data-src='../img/sun4.jpg'>
+            <img data-src='../static/img/sun4.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
