--- a/parallax/parallax.html
+++ b/parallax/parallax.html
@@ -73,7 +73,7 @@
 <body>
     <section>
         <div class="bg">
-            <img src="../img/bg-garden.jpg" data-speed='-2'>
+            <img src="../static/img/bg-garden.jpg" data-speed='-2'>
         </div>
         <img class="bg1" src="../img/sgzt.png" data-speed='4'>
         <img class="bg2" src="../img/let.png" data-speed='-4'>
