--- a/text/star.html
+++ b/text/star.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../static/css/all.css">
     <title>Star</title>
     <style>
         h1 {
@@ -49,42 +49,42 @@
         }
 
         main>div:nth-child(1) {
-            background: url('../img/stars/star1.png');
+            background: url(../static/img/stars/star1.png);
             animation-delay: 0s;
         }
 
         main>div:nth-child(2) {
-            background: url('../img/stars/star2.png');
+            background: url(../static/img/stars/star2.png);
             animation-delay: -1s;
         }
 
         main>div:nth-child(3) {
-            background: url('../img/stars/star3.png');
+            background: url(../static/img/stars/star3.png);
             animation-delay: -2s;
         }
 
         main>div:nth-child(4) {
-            background: url('../img/stars/star4.png');
+            background: url(../static/img/stars/star4.png);
             animation-delay: -3s;
         }
 
         main>div:nth-child(5) {
-            background: url('../img/stars/star5.png');
+            background: url(../static/img/stars/star5.png);
             animation-delay: -4s;
         }
 
         main>div:nth-child(6) {
-            background: url('../img/stars/star6.png');
+            background: url(../static/img/stars/star6.png);
             animation-delay: -5s;
         }
 
         main>div:nth-child(7) {
-            background: url('../img/stars/star7.png');
+            background: url(../static/img/stars/star7.png);
             animation-delay: -6s;
         }
 
         main>div:nth-child(8) {
-            background: url('../img/stars/star8.png');
+            background: url(../static/img/stars/star8.png);
             animation-delay: -7s;
         }
 
