--- a/text/text-growing.html
+++ b/text/text-growing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>text growing</title>
-    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../static/css/all.css">
     <style>
         ul {
             font-size: 4rem;
