--- a/animate/face.html
+++ b/animate/face.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../static/css/all.css">
     <title>face</title>
     <style>
         #mouth {
