--- a/box/icon-box2.html
+++ b/box/icon-box2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_650225_uk978ayo3p6qolxr.css">
-    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../static/css/all.css">
     <title>icon-box2</title>
 </head>
 
