--- a/button/toggle.html
+++ b/button/toggle.html
@@ -90,7 +90,7 @@
         <input type="checkbox">
         <div class="toggle">+</div>
         <div class="imgBox">
-            <img src="../img/xn.jpg" alt="">
+            <img src="../static/img/xn.jpg" alt="">
         </div>
         <div class="content">
             <h3>Some Title</h3>
