--- a/loading/loading-plane.html
+++ b/loading/loading-plane.html
@@ -123,7 +123,7 @@
 
     <section>
         <h2>Arrived</h2>
-        <img src="../img/landing.jpg" alt="">
+        <img src="../static/img/landing.jpg" alt="">
         <button onclick='history.go(0)'>Try Again?</button>
     </section>
 
