--- a/other/street.html
+++ b/other/street.html
@@ -18,7 +18,7 @@
             position: relative;
             width: 100%;
             height: 100%;
-            background: url('../img/street.jpg') no-repeat;
+            background: url(../static/img/street.jpg) no-repeat;
             background-size: cover;
         }
 
