--- a/text/text-shadow.html
+++ b/text/text-shadow.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: url('../img/floor1.jpg');
+            background: url(../static/img/floor1.jpg);
             background-size: cover;
             background-attachment: fixed;
         }
@@ -26,7 +26,7 @@
             font-size: 10rem;
             text-transform: uppercase;
             text-align: center;
-            background: url('../img/floor1.jpg');
+            background: url(../static/img/floor1.jpg);
             background-size: cover;
             background-attachment: fixed;
             -webkit-background-clip: text;
