--- a/index.html
+++ b/index.html
@@ -313,18 +313,22 @@
             <span></span>
             <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">box</h3>
             <ol class="relative z-10 text-lg mt-2">
+                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a href="./box/check-list.html">&Xi;
+                        check-list</a>
+                </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
-                        href="./box/cardsHover.html">&loz; Cards
+                        href="./box/cardsHover.html">&diams; Cards
                         Hover</a></li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
-                        href="./box/image-gallery.html">&loz;
+                        href="./box/image-gallery.html">&Pi;
                         Image
                         Gallery</a>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a href="./box/box.html">&loz;
                         Icon-Box</a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a href="./box/icon-box2.html">&loz;
-                        icon-box2</a>
+                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
+                        href="./box/rotate-box.html">&empty;
+                        Rotate Box</a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a href="./box/shoe.html">&loz;
                         shoe</a>
@@ -433,6 +437,10 @@
                         3d
                         flap
                         image</a>
+                </li>
+                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
+                        href="./image/change-color.html">&bullet;
+                        change-color</a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
                         href="./image/hover-long-image.html">&bullet;
@@ -555,25 +563,31 @@
             <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">text</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
-                        href="./text/text-clip.html">&para;
-                        text-clip</a>
-                </li>
-                <li class="  px-2 py-2 text-yellow-500 hover:bg-indigo-600 hover:text-yellow-400"><a
-                        href="./text/text-growing.html">&para;
-                        text-growing</a>
-                </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
                         href="./text/text-logo.html">&para;
                         logo</a>
-                </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
-                        href="./text/text-shadow.html">&rfloor;
-                        text-shadow</a>
                 </li>
                 <li class="  px-2 py-2 text-yellow-200 hover:bg-indigo-600 hover:text-white"><a
                         href="./text/star.html">&there4;
                         stars</a>
                 </li>
+                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
+                        href="./text/text-clip.html">&para;
+                        text-clip</a>
+                </li>
+                <li class="  px-2 py-2 text-yellow-500 hover:bg-indigo-600 hover:text-yellow-400"><a
+                        href="./text/text-gradian.html">&para;
+                        text-gradian</a>
+                </li>
+                <li class="  px-2 py-2 text-yellow-500 hover:bg-indigo-600 hover:text-yellow-400"><a
+                        href="./text/text-growing.html">&para;
+                        text-growing</a>
+                </li>
+
+                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a
+                        href="./text/text-shadow.html">&rfloor;
+                        text-shadow</a>
+                </li>
+
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white"><a href="./text/typing.html">&ge;
                         typing</a>
                 </li>
