--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./static/css/all.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1300456_zwj3j6ibajs.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1300456_j1yosv4lo9h.css">
     <title>index</title>
     <style>
         body {
@@ -209,6 +209,20 @@
             }
         }
 
+        #logo {
+            animation: fill .5s ease forwards 4.5s;
+        }
+
+        @keyframes fill {
+            from {
+                fill: transparent;
+            }
+
+            to {
+                fill: #4299e1;
+            }
+        }
+
     </style>
 </head>
 
@@ -283,28 +297,26 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">animate</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-face"></i>
+                animate</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-bike"></i>
                     <a href="./animate/bike.html">
                         bike svg
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-nishizhencounterclockwise6"></i>
                     <a href="./animate/counter.html">
                         counter
                     </a>
                 </li>
                 <li class="  px-2 py-2 text-blue-300 hover:bg-indigo-600 hover:text-blue-200">
-                    <i class="iconfont icon-clock"></i>
                     <a href="./animate/clock.html">
                         clock
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-moon"></i>
                     <a href="./animate/day-night.html">day
                         |
                         night
@@ -312,13 +324,11 @@
                     </a>
                 </li>
                 <li class=" px-2 py-2 text-yellow-500 hover:bg-indigo-600  hover:text-yellow-400">
-                    <i class="iconfont icon-face"></i>
                     <a href="./animate/face.html">
                         face
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-scroll"></i>
                     <a href="./animate/scroll.html">
                         scroll
                     </a>
@@ -331,43 +341,38 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">box</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-box"></i>
+                box</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-check_list"></i>
                     <a href="./box/check-list.html">
                         check-list
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-cards"></i>
                     <a href="./box/cardsHover.html">
                         Cards Hover
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-Gallery"></i>
                     <a href="./box/image-gallery.html">
                         Image Gallery
                     </a>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-box"></i>
                     <a href="./box/box.html">
                         Icon-Box</a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-xuanzhuan"></i>
                     <a href="./box/rotate-box.html">
                         Rotate Box</a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-shoes"></i>
                     <a href="./box/shoe.html">
                         shoe
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-tubiao"></i>
                     <a href="./box/skewBorderBox.html">
                         skew border box</a>
                 </li>
@@ -380,49 +385,43 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">button</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-anniu"></i>
+                button</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-anniu"></i>
                     <a href="./button/button-hover.html">
                         button hover
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-anniu"></i>
                     <a href="./button/button-hover-2.html">
                         button hover 2</a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-anniu"></i>
                     <a href="./button/button-hover-3.html">
                         button hover 3</a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-kaiguananniu"></i>
                     <a href="./button/checkbox-day-night.html">
                         day | night
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-down"></i>
                     <a href="./button/dropdown.html">
                         dropdown
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-glass-martini-solid"></i>
                     <a href="./button/glassButton.html">
                         glass botton
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-power"></i>
+                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white text-teal-400">
                     <a href="./button/button-power.html">
                         power switch</a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-close"></i>
                     <a href="./button/toggle.html">
                         toggle button
                     </a>
@@ -436,34 +435,31 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">loading</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-loading1"></i>
+                loading</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-loading-"></i>
                     <a href="./loading/loading1.html">
                         loading 1
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-loading1"></i>
                     <a href="./loading/loading2.html">
                         loading 2
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-loading1"></i>
                     <a href="./loading/loading-circle.html">
                         loading circle
                     </a>
                 </li>
                 <li class=" px-2 py-2 hover:bg-indigo-600 text-blue-300 hover:text-blue-200">
-                    <i class="iconfont icon-plane"></i>
                     <a href="./loading/loading-plane.html">
                         loading-plane
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-loading"></i>
                     <a href="./loading/loading-ring.html">
                         loading-ring
                     </a>
@@ -478,46 +474,41 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">image</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-Gallery"></i>
+                image</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-image"></i>
                     <a href="./image/3DflapImg.html">
                         3d flap image
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-colors"></i>
                     <a href="./image/change-color.html">
                         change-color
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-image"></i>
                     <a href="./image/hover-long-image.html">
                         hover-long-image
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-image"></i>
                     <a href="./image/image-distortion.html">
                         image-distortion
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-Layer"></i>
                     <a href="./image/layered-image.html">
                         layered image
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-image"></i>
                     <a href="./image/lazeLoading.html">
                         laze loading
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-st-image-slider"></i>
                     <a href="./image/slider.html">
                         slider
                     </a>
@@ -530,22 +521,21 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">other</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-form"></i>
+                other</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-gradient"></i>
                     <a href="./other/linear-gradient.html">
                         linear gradient
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-form"></i>
                     <a href="./other/login.html">
                         login form
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-z"></i>
                     <a href="./other/street.html">
                         spot
                     </a>
@@ -558,16 +548,16 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">parallax</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-move"></i>
+                parallax</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-move"></i>
                     <a href="./parallax/parallax.html">
                         parallax
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-scroll"></i>
                     <a href="./parallax/parallax-scroll.html">
                         parallax scroll
                     </a>
@@ -579,22 +569,21 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">scroll</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-scroll"></i>
+                scroll</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-down"></i>
                     <a href="./scroll/scrollDown.html">
                         scroll down
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-navicon"></i>
                     <a href="./scroll/scrollNav.html">
                         scroll nav
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-maodian"></i>
                     <a href="./scroll/scrollSpy.html">
                         scroll spy
                     </a>
@@ -607,22 +596,21 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">shape</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-triangle"></i>
+                shape</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-Curvedline"></i>
                     <a href="./shape/curvedHeader.html">
                         curved header
                     </a>
                 </li>
                 <li class=" px-2 py-2 hover:bg-indigo-600 text-red-500 hover:text-red-400">
-                    <i class="iconfont icon-triangle-s-o"></i>
                     <a href="./shape/triangle.html icon-triangle-s-o">
                         triangle
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-wave"></i>
                     <a href="./shape/wave.html">
                         wave header
                     </a>
@@ -636,47 +624,47 @@
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">text</h3>
+            <h3 class="px-2 text-xl text-blue-300 font-bold tracking-widest">
+                <i class="iconfont icon-Text"></i>
+                text</h3>
             <ol class="relative z-10 text-lg mt-2">
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-Text"></i>
                     <a href="./text/text-logo.html">
                         logo
                     </a>
                 </li>
                 <li class="  px-2 py-2 text-yellow-200 hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-wi-stars"></i>
                     <a href="./text/star.html">
                         stars
                     </a>
                 </li>
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-scissors_px"></i>
                     <a href="./text/text-clip.html">
                         text-clip
                     </a>
                 </li>
-                <li class="  px-2 py-2 text-yellow-500 hover:bg-indigo-600 hover:text-yellow-400">
-                    <i class="iconfont icon-Text"></i>
+                <li class="  px-2 py-2 hover:bg-indigo-600 hover:text-white">
+                    <a href="./text/creative.html">
+                        text creative
+                    </a>
+                </li>
+                <li class="  px-2 py-2 hover:bg-indigo-600 hover:text-white">
                     <a href="./text/text-gradian.html">
                         text-gradian
                     </a>
                 </li>
                 <li class="  px-2 py-2 text-yellow-500 hover:bg-indigo-600 hover:text-yellow-400">
-                    <i class="iconfont icon-Text"></i>
                     <a href="./text/text-growing.html">
                         text-growing
                     </a>
                 </li>
 
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-Wood"></i>
                     <a href="./text/text-shadow.html">
                         text-shadow</a>
                 </li>
 
                 <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <i class="iconfont icon-input"></i>
                     <a href="./text/typing.html">
                         typing
                     </a>
