--- a/text/text-logo.html
+++ b/text/text-logo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/all.css">
-    <title>text log</title>
+    <title>SVG Animation With Text</title>
     <style>
         #logo>path:nth-child(1) {
             stroke-dasharray: 571;
@@ -98,9 +98,24 @@
             animation: line 2s ease forwards 2s;
         }
 
+        #logo,
+        #logo2 {
+            animation: fill .5s ease forwards 3.5s;
+        }
+
         @keyframes line {
             to {
                 stroke-dashoffset: 0;
+            }
+        }
+
+        @keyframes fill {
+            from {
+                fill: transparent;
+            }
+
+            to {
+                fill: white;
             }
         }
 
