add banner animation

--- a/index.html
+++ b/index.html
@@ -301,34 +301,39 @@
                 <i class="iconfont icon-face"></i>
                 animate</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                    <a href="./animate/banner.html">
+                        banner
+                    </a>
+                </li>
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./animate/bike.html">
                         bike svg
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./animate/counter.html">
                         counter
                     </a>
                 </li>
-                <li class="  px-2 py-2 text-blue-300 hover:bg-indigo-600 hover:text-blue-200">
+                <li class="cursor-pointer  px-2 py-2 text-blue-300 hover:bg-indigo-600 hover:text-blue-200">
                     <a href="./animate/clock.html">
                         clock
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./animate/day-night.html">day
                         |
                         night
 
                     </a>
                 </li>
-                <li class=" px-2 py-2 text-yellow-500 hover:bg-indigo-600  hover:text-yellow-400">
+                <li class="cursor-pointer px-2 py-2 text-yellow-500 hover:bg-indigo-600  hover:text-yellow-400">
                     <a href="./animate/face.html">
                         face
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./animate/scroll.html">
                         scroll
                     </a>
@@ -345,34 +350,34 @@
                 <i class="iconfont icon-box"></i>
                 box</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./box/check-list.html">
                         check-list
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./box/cardsHover.html">
                         Cards Hover
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./box/image-gallery.html">
                         Image Gallery
                     </a>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./box/box.html">
                         Icon-Box</a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./box/rotate-box.html">
                         Rotate Box</a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./box/shoe.html">
                         shoe
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./box/skewBorderBox.html">
                         skew border box</a>
                 </li>
@@ -389,39 +394,39 @@
                 <i class="iconfont icon-anniu"></i>
                 button</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./button/button-hover.html">
                         button hover
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./button/button-hover-2.html">
                         button hover 2</a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./button/button-hover-3.html">
                         button hover 3</a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./button/checkbox-day-night.html">
                         day | night
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./button/dropdown.html">
                         dropdown
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./button/glassButton.html">
                         glass botton
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white text-teal-400">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-teal-100 text-teal-400">
                     <a href="./button/button-power.html">
                         power switch</a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./button/toggle.html">
                         toggle button
                     </a>
@@ -439,27 +444,27 @@
                 <i class="iconfont icon-loading1"></i>
                 loading</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./loading/loading1.html">
                         loading 1
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./loading/loading2.html">
                         loading 2
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./loading/loading-circle.html">
                         loading circle
                     </a>
                 </li>
-                <li class=" px-2 py-2 hover:bg-indigo-600 text-blue-300 hover:text-blue-200">
+                <li class="cursor-pointer px-2 py-2 hover:bg-indigo-600 text-blue-300 hover:text-blue-200">
                     <a href="./loading/loading-plane.html">
                         loading-plane
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./loading/loading-ring.html">
                         loading-ring
                     </a>
@@ -478,37 +483,37 @@
                 <i class="iconfont icon-Gallery"></i>
                 image</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./image/3DflapImg.html">
                         3d flap image
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./image/change-color.html">
                         change-color
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./image/hover-long-image.html">
                         hover-long-image
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./image/image-distortion.html">
                         image-distortion
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./image/layered-image.html">
                         layered image
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./image/lazeLoading.html">
                         laze loading
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./image/slider.html">
                         slider
                     </a>
@@ -525,17 +530,17 @@
                 <i class="iconfont icon-form"></i>
                 other</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./other/linear-gradient.html">
                         linear gradient
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./other/login.html">
                         login form
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./other/street.html">
                         spot
                     </a>
@@ -552,12 +557,12 @@
                 <i class="iconfont icon-move"></i>
                 parallax</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./parallax/parallax.html">
                         parallax
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./parallax/parallax-scroll.html">
                         parallax scroll
                     </a>
@@ -573,17 +578,17 @@
                 <i class="iconfont icon-scroll"></i>
                 scroll</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./scroll/scrollDown.html">
                         scroll down
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./scroll/scrollNav.html">
                         scroll nav
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./scroll/scrollSpy.html">
                         scroll spy
                     </a>
@@ -600,17 +605,17 @@
                 <i class="iconfont icon-triangle"></i>
                 shape</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./shape/curvedHeader.html">
                         curved header
                     </a>
                 </li>
-                <li class=" px-2 py-2 hover:bg-indigo-600 text-red-500 hover:text-red-400">
+                <li class="cursor-pointer px-2 py-2 hover:bg-indigo-600 text-red-500 hover:text-red-400">
                     <a href="./shape/triangle.html icon-triangle-s-o">
                         triangle
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./shape/wave.html">
                         wave header
                     </a>
@@ -628,43 +633,45 @@
                 <i class="iconfont icon-Text"></i>
                 text</h3>
             <ol class="relative z-10 text-lg mt-2">
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./text/text-logo.html">
                         logo
                     </a>
                 </li>
-                <li class="  px-2 py-2 text-yellow-200 hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                    <a href="./text/text-clip.html">
+                        clip
+                    </a>
+                </li>
+                <li class="cursor-pointer  px-2 py-2 hover:bg-indigo-600 hover:text-white">
+                    <a href="./text/creative.html">
+                        creative
+                    </a>
+                </li>
+                <li class="cursor-pointer  px-2 py-2 hover:bg-indigo-600 hover:text-white">
+                    <a href="./text/text-gradian.html">
+                        gradian
+                    </a>
+                </li>
+                <li class="cursor-pointer  px-2 py-2 text-yellow-500 hover:bg-indigo-600 hover:text-yellow-400">
+                    <a href="./text/text-growing.html">
+                        growing
+                    </a>
+                </li>
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                    <a href="./text/marquee.html">
+                        marquee</a>
+                </li>
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                    <a href="./text/text-shadow.html">
+                        shadow</a>
+                </li>
+                <li class="cursor-pointer  px-2 py-2 text-yellow-200 hover:bg-indigo-600 hover:text-white">
                     <a href="./text/star.html">
                         stars
                     </a>
                 </li>
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <a href="./text/text-clip.html">
-                        text-clip
-                    </a>
-                </li>
-                <li class="  px-2 py-2 hover:bg-indigo-600 hover:text-white">
-                    <a href="./text/creative.html">
-                        text creative
-                    </a>
-                </li>
-                <li class="  px-2 py-2 hover:bg-indigo-600 hover:text-white">
-                    <a href="./text/text-gradian.html">
-                        text-gradian
-                    </a>
-                </li>
-                <li class="  px-2 py-2 text-yellow-500 hover:bg-indigo-600 hover:text-yellow-400">
-                    <a href="./text/text-growing.html">
-                        text-growing
-                    </a>
-                </li>
-
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
-                    <a href="./text/text-shadow.html">
-                        text-shadow</a>
-                </li>
-
-                <li class=" px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
+                <li class="cursor-pointer px-2 py-2 rounded hover:bg-indigo-600 hover:text-white">
                     <a href="./text/typing.html">
                         typing
                     </a>
