fix plane loading img

--- a/loading/loading-plane.html
+++ b/loading/loading-plane.html
@@ -114,11 +114,11 @@
 
 <body>
     <div class="preload">
-        <img class='plane' src="../img/plane.png" alt="">
+        <img class='plane' src="../static/img/plane.png" alt="">
         <h3>Landing on the website...</h3>
-        <img class='cloud1' src="../img/cloud.png" alt="">
-        <img class='cloud2' src="../img/cloud.png" alt="">
-        <img class='cloud3' src="../img/cloud.png" alt="">
+        <img class='cloud1' src="../static/img/cloud.png" alt="">
+        <img class='cloud2' src="../static/img/cloud.png" alt="">
+        <img class='cloud3' src="../static/img/cloud.png" alt="">
     </div>
 
     <section>
