--- a/parallax/parallax.html
+++ b/parallax/parallax.html
@@ -75,9 +75,9 @@
         <div class="bg">
             <img src="../static/img/bg-garden.jpg" data-speed='-2'>
         </div>
-        <img class="bg1" src="../img/sgzt.png" data-speed='4'>
-        <img class="bg2" src="../img/let.png" data-speed='-4'>
-        <img class="beauty" src="../img/beauty.png" data-speed='2'>
+        <img class="bg1" src="../static/img/sgzt.png" data-speed='4'>
+        <img class="bg2" src="../static/img/let.png" data-speed='-4'>
+        <img class="beauty" src="../static/img/beauty.png" data-speed='2'>
     </section>
 
     <script>
