--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                     </a>
                 </li>
                 <li class="cursor-pointer px-2 py-2 hover:bg-indigo-600 text-red-500 hover:text-red-400">
-                    <a href="./shape/triangle.html icon-triangle-s-o">
+                    <a href="./shape/triangle.html">
                         triangle
                     </a>
                 </li>
